--- a/portfolio.html
+++ b/portfolio.html
@@ -70,7 +70,7 @@
                 <ul class="list products">
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" height="294px"
+                            <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" height="294"
                                 width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Technocrack</h3>
@@ -82,7 +82,7 @@
                         <figure class="product">
                             <img src="./images/curry-poster.jpg"
                                 alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
-                                height="294px" width="370">
+                                height="294" width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Grafika New Orlean vs Golden Star</h3>
                                 <p class="category-name">Dizajn</p>
@@ -91,7 +91,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" height="294px"
+                            <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" height="294"
                                 width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Restauracja Seafood</h3>
@@ -101,7 +101,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/headphones.jpg" alt="słuchawki nauszne" height="294px" width="370">
+                            <img src="./images/headphones.jpg" alt="słuchawki nauszne" height="294" width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt Prime</h3>
                                 <p class="category-name">Marketing</p>
@@ -110,7 +110,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" height="294px" width="370">
+                            <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" height="294" width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt Boxes</h3>
                                 <p class="category-name">Aplikacja</p>
@@ -119,7 +119,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" height="294px"
+                            <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" height="294"
                                 width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Inspiration has no Borders</h3>
@@ -129,7 +129,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img img src="./images/magazine.jpg" alt="magazyn" height="294px" width="370">
+                            <img src="./images/magazine.jpg" alt="magazyn" height="294" width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Magazyn Limited Edition</h3>
                                 <p class="category-name">Dizajn</p>
@@ -138,7 +138,7 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" height="294px" width="370">
+                            <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" height="294" width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt LAB</h3>
                                 <p class="category-name">Marketing</p>
@@ -148,7 +148,7 @@
                     <li class="list-item">
                         <figure class="product">
                             <img src="./images/macbook.jpg"
-                                alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa" height="294px"
+                                alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa" height="294"
                                 width="370">
                             <figcaption class="product-description">
                                 <h3 class="product-title">Growing Business</h3>
