--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Studio</title>
+    <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -23,7 +23,7 @@
                 <span class="logo--color">Web</span>Studio</a>
             <nav class="nav">
                 <ul class="list">
-                    <li class="list-item"><a class="link" href="index.html">Agencja</a></li>
+                    <li class="list-item"><a class="link " href="index.html">Agencja</a></li>
                     <li class="list-item"><a class="link active" href="portfolio.html">Portfolio</a></li>
                     <li class="list-item"><a class="link" href="#">Kontakt</a></li>
                 </ul>
@@ -173,37 +173,35 @@
             </div>
             <div class="footer-socials">
                 <h3 class="list-header">Dołącz do nas</h3>
-                <ul class="socials">
-                    <div class="socials-container">
-                        <li class="social">
-                            <svg width="20" height="20">
-                                <a href="#" class="link">
-                                    <use xlink:href="./images/icons.svg#instagram-logo"></use>
-                                </a>
-                            </svg>
-                        </li>
-                        <li class="social">
-                            <svg width="20" height="20">
-                                <a href="#" class="link">
-                                    <use xlink:href="./images/icons.svg#twitter-logo"></use>
-                                </a>
-                            </svg>
-                        </li>
-                        <li class="social">
-                            <svg width="20" height="20">
-                                <a href="#" class="link">
-                                    <use xlink:href="./images/icons.svg#facebook-logo"></use>
-                                </a>
-                            </svg>
-                        </li>
-                        <li class="social">
-                            <svg width="20" height="20">
-                                <a href="#" class="link">
-                                    <use xlink:href="./images/icons.svg#linkin-logo"></use>
-                                </a>
-                            </svg>
-                        </li>
-                    </div>
+                <ul class="socials-footer">
+                    <li class="social">
+                        <svg width="20" height="20">
+                            <a href="#">
+                                <use xlink:href="./images/icons.svg#instagram-logo"></use>
+                            </a>
+                        </svg>
+                    </li>
+                    <li class="social">
+                        <svg width="20" height="20">
+                            <a href="#">
+                                <use xlink:href="./images/icons.svg#twitter-logo"></use>
+                            </a>
+                        </svg>
+                    </li>
+                    <li class="social">
+                        <svg width="20" height="20">
+                            <a href="#">
+                                <use xlink:href="./images/icons.svg#facebook-logo"></use>
+                            </a>
+                        </svg>
+                    </li>
+                    <li class="social">
+                        <svg width="20" height="20">
+                            <a href="#">
+                                <use xlink:href="./images/icons.svg#linkin-logo"></use>
+                            </a>
+                        </svg>
+                    </li>
                 </ul>
             </div>
         </div>
