--- a/portfolio.html
+++ b/portfolio.html
@@ -23,34 +23,24 @@
                 <span class="logo--color">Web</span>Studio</a>
             <nav class="nav">
                 <ul class="list">
-                    <li class="list-item"><a class="link " href="index.html">Agencja</a></li>
+                    <li class="list-item"><a class="link" href="index.html">Agencja</a></li>
                     <li class="list-item"><a class="link active" href="portfolio.html">Portfolio</a></li>
                     <li class="list-item"><a class="link" href="#">Kontakt</a></li>
                 </ul>
             </nav>
             <div class="contact-div">
-                <ul class="contact">
-                    <li class="list-item">
-                        <a class="link" href="mailto:info@devstudio.com">
-                            <div class="link-container">
-                                <svg width="16" height="12">
-                                    <use xlink:href="./images/icons.svg#envelope-logo"></use>
-                                </svg>
-                                info@example.com
-                            </div>
-                        </a>
-                    </li>
-                    <li class="list-item">
-                        <a class="link" href="tel:+48111111111">
-                            <div class="link-container">
-                                <svg width="10" height="16">
-                                    <use xlink:href="./images/icons.svg#smartphone-logo"></use>
-                                </svg>
-                                +48 111 111 111
-                            </div>
-                        </a>
-                    </li>
-                </ul>
+                <a href="mailto:info@devstudio.com" class="link-padding--30">
+                    <svg width="16" height="12">
+                        <use xlink:href="./images/icons.svg#envelope-logo"></use>
+                    </svg>
+                    <span>info@example.com</span>
+                </a>
+                <a href="tel:+48111111111">
+                    <svg width="10" height="16" class="svg-padding--10">
+                        <use xlink:href="./images/icons.svg#smartphone-logo"></use>
+                    </svg>
+                    <span>+48 111 111 111</span>
+                </a>
             </div>
         </div>
     </header>
