--- a/portfolio.html
+++ b/portfolio.html
@@ -29,13 +29,13 @@
                 </ul>
             </nav>
             <div class="contact-div">
-                <a href="mailto:info@devstudio.com" class="link-padding--30">
+                <a href="mailto:info@devstudio.com" class="link link-padding--30">
                     <svg width="16" height="12">
                         <use xlink:href="./images/icons.svg#envelope-logo"></use>
                     </svg>
                     <span>info@example.com</span>
                 </a>
-                <a href="tel:+48111111111">
+                <a href="tel:+48111111111" class="link">
                     <svg width="10" height="16" class="svg-padding--10">
                         <use xlink:href="./images/icons.svg#smartphone-logo"></use>
                     </svg>
