effects and animation
added after, hover effects on elements:
-menu links (blue underline on active page)
-overlay in porftolio on every product
-added svg icon to close backdrop

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,8 +60,15 @@
                 <ul class="list products">
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" height="294"
-                                width="370">
+                            <div class="box">
+                                <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" height="294"
+                                    width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Technocrack</h3>
                                 <p class="category-name">Strona internetowa</p>
@@ -70,9 +77,16 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/curry-poster.jpg"
-                                alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
-                                height="294" width="370">
+                            <div class="box">
+                                <img src="./images/curry-poster.jpg"
+                                    alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
+                                    height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Grafika New Orlean vs Golden Star</h3>
                                 <p class="category-name">Dizajn</p>
@@ -81,8 +95,15 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" height="294"
-                                width="370">
+                            <div class="box">
+                                <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" height="294"
+                                    width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Restauracja Seafood</h3>
                                 <p class="category-name">Aplikacja</p>
@@ -91,7 +112,14 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/headphones.jpg" alt="słuchawki nauszne" height="294" width="370">
+                            <div class="box">
+                                <img src="./images/headphones.jpg" alt="słuchawki nauszne" height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt Prime</h3>
                                 <p class="category-name">Marketing</p>
@@ -100,7 +128,14 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" height="294" width="370">
+                            <div class="box">
+                                <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt Boxes</h3>
                                 <p class="category-name">Aplikacja</p>
@@ -109,8 +144,15 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" height="294"
-                                width="370">
+                            <div class="box">
+                                <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową"
+                                    height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Inspiration has no Borders</h3>
                                 <p class="category-name">Strona internetowa</p>
@@ -119,7 +161,14 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/magazine.jpg" alt="magazyn" height="294" width="370">
+                            <div class="box">
+                                <img src="./images/magazine.jpg" alt="magazyn" height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Magazyn Limited Edition</h3>
                                 <p class="category-name">Dizajn</p>
@@ -128,7 +177,14 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" height="294" width="370">
+                            <div class="box">
+                                <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" height="294" width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Projekt LAB</h3>
                                 <p class="category-name">Marketing</p>
@@ -137,9 +193,16 @@
                     </li>
                     <li class="list-item">
                         <figure class="product">
-                            <img src="./images/macbook.jpg"
-                                alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa" height="294"
-                                width="370">
+                            <div class="box">
+                                <img src="./images/macbook.jpg"
+                                    alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa" height="294"
+                                    width="370">
+                                <div class="overlay">
+                                    <p>Technocrack jest popularną platformą wykorzystywaną do rozpowszechniania
+                                        koronawirusa. Firmy wykorzystują tę platformę do celów szpiegowskich i ataków na
+                                        niezabezpieczone serwery konkurencji</p>
+                                </div>
+                            </div>
                             <figcaption class="product-description">
                                 <h3 class="product-title">Growing Business</h3>
                                 <p class="category-name">Aplikacja</p>
