--- a/index.html
+++ b/index.html
@@ -392,7 +392,11 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
         <div class="modal">
-            <button type="button" class="close-btn" data-modal-close>X</button>
+            <button type="button" class="close-btn" data-modal-close>
+                <svg width="18" height="18">
+                    <use xlink:href="./images/icons.svg#close-black"></use>
+                </svg>
+            </button>
         </div>
     </div>
 
