--- a/index.html
+++ b/index.html
@@ -108,18 +108,27 @@
         <section class="section">
             <div class="container">
                 <h2 class="header-secondary">Czym się zajmujemy</h2>
-                <ul class="list">
+                <ul class="list our-services">
                     <li class="list-item">
-                        <img src="./images/img.jpg" height="294" width="370"
-                            alt="photo shows person typing on apple keyboard">
+                        <div class="thumb">
+                            <p class="label">Aplikacje komputerowe</p>
+                            <img src="./images/img.jpg" height="294" width="370"
+                                alt="photo shows person typing on apple keyboard">
+                        </div>
                     </li>
                     <li class="list-item">
-                        <img src="./images/img2.jpg" height="294" width="370"
-                            alt="Photo shows a person looking at laptop">
+                        <div class="thumb">
+                            <p class="label">Aplikacje komputerowe</p>
+                            <img src="./images/img2.jpg" height="294" width="370"
+                                alt="Photo shows a person looking at laptop">
+                        </div>
                     </li>
                     <li class="list-item">
-                        <img src="./images/box3.jpg" height="294" width="370"
-                            alt="Photo shows a person looking at tablet">
+                        <div class="thumb">
+                            <p class="label">Aplikacje komputerowe</p>
+                            <img src="./images/box3.jpg" height="294" width="370"
+                                alt="Photo shows a person looking at tablet">
+                        </div>
                     </li>
                 </ul>
             </div>
