--- a/index.html
+++ b/index.html
@@ -397,6 +397,20 @@
                     </li>
                 </ul>
             </div>
+            <form class="newsletter-form" name="newsletter-form" autocomplete="off" action="">
+                <p class="newsletter-text">Zapisz się do newslettera</p>
+                <div class="newsletter-container">
+                    <label>
+                        <input class="email-input" type="email" name="email" placeholder="E-mail"/>
+                      </label>
+                    <button class="btn submit" type="submit">
+                        Zapisz się
+                        <svg class="send-icon" width="24" height="24">
+                            <use xlink:href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -406,6 +420,43 @@
                     <use xlink:href="./images/icons.svg#close-black"></use>
                 </svg>
             </button>
+            <div class="form-container">
+            <form name="signup-form" autocomplete="off" novalidate class="order-form">
+                <h3>Zostaw swoje dane w formularzu poniżej</h3>
+                <label class="form-label">
+                    Imię
+                  <svg width="18" height="18">
+                    <use xlink:href="./images/icons.svg#person-black"></use>
+                  </svg>
+                  <input type="text" name="name" class="input"/>
+                </label>
+                <label class="form-label">
+                    Telefon
+                    <svg width="18" height="18">
+                        <use xlink:href="./images/icons.svg#phone-black"></use>
+                      </svg>
+                    <input type="text" name="phone" class="input"/>
+                  </label>
+                <label class="form-label">
+                  Email
+                  <svg width="18" height="18">
+                    <use xlink:href="./images/icons.svg#email-black"></use>
+                  </svg>
+                  <input type="email" name="email" class="input"/>
+                </label>
+                <label>
+                    Komentarz
+                    <textarea name="comment" rows="5" placeholder="Wprowadź tekst" class="comment"></textarea>
+                </label>
+              <label class="checkbox">
+                <input type="checkbox" name="terms" value="">
+                <p>Oświadczam iż akceptuję <a href="#" class="link">Regulamin</a> i
+                    <a href="#" class="link">Politykę Prywatności.</a></p>
+              </label>
+              
+                <button type="submit" class="btn">Wyślij</button>
+              </form>
+            </div>
         </div>
     </div>
 
