--- a/index.html
+++ b/index.html
@@ -420,42 +420,41 @@
                     <use xlink:href="./images/icons.svg#close-black"></use>
                 </svg>
             </button>
-            <div class="form-container">
-            <form name="signup-form" autocomplete="off" novalidate class="order-form">
-                <h3>Zostaw swoje dane w formularzu poniżej</h3>
-                <label class="form-label">
+            <div class="container-form" style="border: 1px dashed red;">
+            <h3 class="form-header">Zostaw swoje dane w formularzu poniżej</h3>
+            <form>
+                <label class="label-modal">
                     Imię
-                  <svg width="18" height="18">
-                    <use xlink:href="./images/icons.svg#person-black"></use>
-                  </svg>
-                  <input type="text" name="name" class="input"/>
+                    <svg width="18" height="18">
+                        <use xlink:href="./images/icons.svg#person-black"></use>
+                    </svg>
+                    <input type="text" name="name" class="input">
                 </label>
-                <label class="form-label">
+                <label class="label-modal">
                     Telefon
                     <svg width="18" height="18">
                         <use xlink:href="./images/icons.svg#phone-black"></use>
-                      </svg>
-                    <input type="text" name="phone" class="input"/>
-                  </label>
-                <label class="form-label">
-                  Email
-                  <svg width="18" height="18">
-                    <use xlink:href="./images/icons.svg#email-black"></use>
-                  </svg>
-                  <input type="email" name="email" class="input"/>
+                    </svg>
+                    <input type="text" name="phone" class="input">
                 </label>
-                <label>
+                <label class="label-modal">
+                    Email
+                    <svg width="18" height="18">
+                        <use xlink:href="./images/icons.svg#email-black"></use>
+                    </svg>
+                    <input type="text" name="enail" class="input">
+                </label>
+                <label class="label-modal comment">
                     Komentarz
                     <textarea name="comment" rows="5" placeholder="Wprowadź tekst" class="comment"></textarea>
                 </label>
-              <label class="checkbox">
+              <label class="terms-label">
                 <input type="checkbox" name="terms" value="">
                 <p>Oświadczam iż akceptuję <a href="#" class="link">Regulamin</a> i
                     <a href="#" class="link">Politykę Prywatności.</a></p>
               </label>
-              
-                <button type="submit" class="btn">Wyślij</button>
-              </form>
+              <button type="submit" class="">Wyślij</button>
+            </form>
             </div>
         </div>
     </div>
