--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
                             <svg width="18" height="18" class="icon-form">
                                 <use xlink:href="./images/icons.svg#person-black"></use>
                             </svg>
-                            <input type="text" name="name" class="input">
+                            <input type="text" name="name" class="input" required>
                         </div>
                     </label>
                     <label class="label-modal">
@@ -438,7 +438,7 @@
                             <svg width="18" height="18">
                                 <use xlink:href="./images/icons.svg#phone-black"></use>
                             </svg>
-                            <input type="text" name="phone" class="input">
+                            <input type="tel" name="phone" class="input" title="Fill phone before sending!" required>
                         </div>
                     </label>
                     <label class="label-modal">
@@ -447,7 +447,7 @@
                             <svg width="18" height="18">
                                 <use xlink:href="./images/icons.svg#email-black"></use>
                             </svg>
-                            <input type="text" name="enail" class="input">
+                            <input type="text" name="email" class="input" title="Fill email before sending!" required>
                         </div>
                     </label>
                     <label class="label-modal comment">
@@ -460,7 +460,8 @@
                         <svg width="11" height="8" class="icon-check">
                             <use xlink:href="./images/icons.svg#icon-check"></use>
                         </svg>
-                        <input name="checkbox" class="checkbox" id="custom-checkbox"></input>
+                        <input name="checkbox" class="checkbox" id="custom-checkbox"
+                            title="Accept term and conditions before sending!" required></input>
                         <!-- </div> -->
                         <label for="custom-checkbox" class="privacy-policy">Oświadczam iż akceptuję <a href="#"
                                 class="link">Regulamin</a> i
