--- a/index.html
+++ b/index.html
@@ -423,33 +423,27 @@
             <div class="container-form">
                 <form>
                     <h3 class="form-header">Zostaw swoje dane w formularzu poniżej</h3>
-                    <label class="label-modal">
-                        Imię
+                    <label for="name-input" class="label-modal">Imię</label>
                         <div class="input-icons">
                             <svg width="18" height="18" class="icon-form">
                                 <use xlink:href="./images/icons.svg#person-black"></use>
                             </svg>
-                            <input type="text" name="name" class="input" required>
+                            <input type="text" name="name" class="input" id="name-input" required>
                         </div>
-                    </label>
-                    <label class="label-modal">
-                        Telefon
+                    <label for="phone-input" class="label-modal">Telefon</label>
                         <div class="input-icons">
                             <svg width="18" height="18">
                                 <use xlink:href="./images/icons.svg#phone-black"></use>
                             </svg>
-                            <input type="tel" name="phone" class="input" title="Fill phone before sending!" required>
+                            <input type="tel" name="phone" class="input" id="phone-input" title="Fill phone before sending!" required>
                         </div>
-                    </label>
-                    <label class="label-modal">
-                        Email
+                    <label for="email-input" class="label-modal">Email</label>
                         <div class="input-icons">
                             <svg width="18" height="18">
                                 <use xlink:href="./images/icons.svg#email-black"></use>
                             </svg>
-                            <input type="text" name="email" class="input" title="Fill email before sending!" required>
+                            <input type="text" name="email" class="input" id="email-input" title="Fill email before sending!" required>
                         </div>
-                    </label>
                     <label class="label-modal comment">
                         Komentarz
                         <div class="text-area-div"></div>
