--- a/index.html
+++ b/index.html
@@ -424,44 +424,41 @@
                 <form>
                     <h3 class="form-header">Zostaw swoje dane w formularzu poniżej</h3>
                     <label for="name-input" class="label-modal">Imię</label>
-                        <div class="input-icons">
-                            <svg width="18" height="18" class="icon-form">
-                                <use xlink:href="./images/icons.svg#person-black"></use>
-                            </svg>
-                            <input type="text" name="name" class="input" id="name-input" required>
-                        </div>
+                    <div class="input-icons">
+                        <svg width="18" height="18" class="icon-form">
+                            <use xlink:href="./images/icons.svg#person-black"></use>
+                        </svg>
+                        <input type="text" name="name" class="input" id="name-input" required>
+                    </div>
                     <label for="phone-input" class="label-modal">Telefon</label>
-                        <div class="input-icons">
-                            <svg width="18" height="18">
-                                <use xlink:href="./images/icons.svg#phone-black"></use>
-                            </svg>
-                            <input type="tel" name="phone" class="input" id="phone-input" title="Fill phone before sending!" required>
-                        </div>
+                    <div class="input-icons">
+                        <svg width="18" height="18">
+                            <use xlink:href="./images/icons.svg#phone-black"></use>
+                        </svg>
+                        <input type="tel" name="phone" class="input" id="phone-input" title="Fill phone before sending!"
+                            required>
+                    </div>
                     <label for="email-input" class="label-modal">Email</label>
-                        <div class="input-icons">
-                            <svg width="18" height="18">
-                                <use xlink:href="./images/icons.svg#email-black"></use>
-                            </svg>
-                            <input type="text" name="email" class="input" id="email-input" title="Fill email before sending!" required>
-                        </div>
+                    <div class="input-icons">
+                        <svg width="18" height="18">
+                            <use xlink:href="./images/icons.svg#email-black"></use>
+                        </svg>
+                        <input type="text" name="email" class="input" id="email-input"
+                            title="Fill email before sending!" required>
+                    </div>
                     <label class="label-modal comment">
                         Komentarz
                         <div class="text-area-div"></div>
                         <textarea name="comment" rows="5" placeholder="Wprowadź tekst"></textarea>
                     </label>
-                    <label class="terms-label">
-                        <!-- <div class="input-icons"> -->
-                        <svg width="11" height="8" class="icon-check">
-                            <use xlink:href="./images/icons.svg#icon-check"></use>
-                        </svg>
-                        <input name="checkbox" class="checkbox" id="custom-checkbox"
-                            title="Accept term and conditions before sending!" required></input>
-                        <!-- </div> -->
-                        <label for="custom-checkbox" class="privacy-policy">Oświadczam iż akceptuję <a href="#"
+                    <div class="policy-container">
+                        <input type="checkbox" class="modal-form-policy visually-hidden" name="user-policy-checkbox"
+                            id="user-policy">
+                        <label for="user-policy" class="modal-form-policy-text">Oświadczam iż akceptuję <a href="#"
                                 class="link">Regulamin</a> i
-                            <a href="#" class="link">Politykę Prywatności</a>.
-                        </label>
-                    </label>
+                            <a href="#" class="link">Politykę Prywatności</a>.</label>
+                    </div>
+
                     <div class="button-center">
                         <button type="submit" class="btn">Wyślij</button>
                     </div>
