--- a/index.html
+++ b/index.html
@@ -454,9 +454,11 @@
                     <div class="policy-container">
                         <input type="checkbox" class="modal-form-policy visually-hidden" name="user-policy-checkbox"
                             id="user-policy">
-                        <label for="user-policy" class="modal-form-policy-text">Oświadczam iż akceptuję <a href="#"
-                                class="link">Regulamin</a> i
-                            <a href="#" class="link">Politykę Prywatności</a>.</label>
+                        <label for="user-policy" class="modal-form-policy-text">
+
+                            Oświadczam iż akceptuję <a href="#" class="link">Regulamin</a> i <a href="#"
+                                class="link">Politykę Prywatności</a>.</label>
+
                     </div>
 
                     <div class="button-center">
