spaces in policy
added spaces in policy

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
                             id="user-policy">
                         <label for="user-policy" class="modal-form-policy-text">
 
-                            Oświadczam iż akceptuję <a href="#" class="link">Regulamin</a> i <a href="#"
+                            Oświadczam iż akceptuję&nbsp;<a href="#" class="link">Regulamin&nbsp;</a> i&nbsp; <a href="#"
                                 class="link">Politykę Prywatności</a>.</label>
 
                     </div>
