--- a/portfolio.html
+++ b/portfolio.html
@@ -257,6 +257,20 @@
                     </li>
                 </ul>
             </div>
+            <form class="newsletter-form" name="newsletter-form" autocomplete="off" action="">
+                <p class="newsletter-text">Zapisz się do newslettera</p>
+                <div class="newsletter-container">
+                    <label>
+                        <input class="email-input" type="email" name="email" placeholder="E-mail" />
+                    </label>
+                    <button class="btn submit" type="submit">
+                        Zapisz się
+                        <svg class="send-icon" width="24" height="24">
+                            <use xlink:href="./images/icons.svg#icon-send"></use>
+                        </svg>
+                    </button>
+                </div>
+            </form>
         </div>
     </footer>
 </body>
