added effects on button and links in form
added effects on button (on hover and focus) and transition on links in form

--- a/index.html
+++ b/index.html
@@ -462,7 +462,7 @@
                     </div>
 
                     <div class="button-center">
-                        <button type="submit" class="btn">Wyślij</button>
+                        <button type="submit" class="btn btn-submit">Wyślij</button>
                     </div>
                 </form>
             </div>
