--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,8 @@
         </div>
     </header>
     <main>
-        <section>
-            <div class="container">
+        <section class="section">
+            <div class="container--center">
                 <ul class="filters">
                     <li class="filters__item"><button type="button" class="button--filter">Wszyskie</button></li>
                     <li class="filters__item"><button type="button" class="button--filter">Strony</button></li>
