--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header line">
-        <div class="container container--header">
+        <div class="header__container">
             <a href="./index.html" class="logo">
                 <span class="logo--color">Web</span>Studio</a>
             <nav>
@@ -53,14 +53,14 @@
     <main>
         <section class="top-section" style="border: 1px solid green;">
             <div class="top-section__overlay">
-                <div class="container container--topsection">
+                <div class="top-section__container">
                     <h1 class="top-section__primary-heading">Efektywne rozwiązania<br> dla waszego biznesu</h1>
                     <button class="button" type="button" data-modal-open>Zamów usługe</button>
                 </div>
             </div>
         </section>
         <section class="section">
-            <div class="container">
+            <div class="strengths__container">
                 <ul class="strengths">
                     <li>
                         <div class="strengths__box">
@@ -114,7 +114,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container container--column">
+            <div class="services__container">
                 <h2 class="section__header-secondary">Czym się zajmujemy</h2>
                 <ul class="services">
                     <li class="services__item">
@@ -136,7 +136,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container container--column">
+            <div class="team__container">
                 <h2 class="section__header-secondary">Nasz zespół</h2>
                 <ul class="team">
                     <li class="team__card">
@@ -305,7 +305,7 @@
             </div>
         </section>
         <section class="section">
-            <div class="container container--column">
+            <div class="clients__container">
                 <h2 class="section__header-secondary">Nasi klienci</h2>
                 <ul class="clients">
                     <li class="clients__card">
@@ -355,8 +355,8 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="footer__container">
+        <div class="footer__container">
+            <div class="footer__container__box">
                 <p class="footer__logo"><span class="footer__logo--color">Web</span>Studio</p>
                 <address class="footer__address">
                     m. Warszawa, Aleje Jerozolimskie 21
@@ -364,7 +364,7 @@
                     <a class="footer__link" href="tel:+48111111111">+48 111 111 111</a>
                 </address>
             </div>
-            <div class="footer__container">
+            <div class="footer__container__box">
                 <h3 class="footer__header">Dołącz do nas</h3>
                 <ul class="footer__socials">
                     <li class="footer__socials__item">
@@ -424,22 +424,22 @@
             <div class="container-form">
                 <form>
                     <h3 class="form__header">Zostaw swoje dane w formularzu poniżej</h3>
-                    <label for="name-input" >Imię</label>
+                    <label for="name-input">Imię</label>
                     <div class="border">
                         <input type="text" name="name" class="form__input" id="name-input" required>
                         <svg width="18" height="18" class="form__icon">
                             <use xlink:href="./images/icons.svg#person-black"></use>
                         </svg>
                     </div>
-                    <label for="phone-input" >Telefon</label>
+                    <label for="phone-input">Telefon</label>
                     <div class="border">
-                        <input type="tel" name="phone" class="form__input" id="phone-input" title="Fill phone before sending!"
-                            required>
+                        <input type="tel" name="phone" class="form__input" id="phone-input"
+                            title="Fill phone before sending!" required>
                         <svg width="18" height="18" class="form__icon">
                             <use xlink:href="./images/icons.svg#phone-black"></use>
                         </svg>
                     </div>
-                    <label for="email-input" >Email</label>
+                    <label for="email-input">Email</label>
                     <div class="border">
                         <input type="text" name="email" class="form__input" id="email-input"
                             title="Fill email before sending!" required>
