--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
 <body>
     <header class="header line">
-        <div class="container container--header">
+        <div class="header__container">
             <a href="./index.html" class="logo">
                 <span class="logo--color">Web</span>Studio</a>
             <nav>
@@ -52,7 +52,7 @@
     </header>
     <main>
         <section class="section">
-            <div class="container--center">
+            <div class="filters__container">
                 <ul class="filters">
                     <li class="filters__item"><button type="button" class="button--filter">Wszyskie</button></li>
                     <li class="filters__item"><button type="button" class="button--filter">Strony</button></li>
@@ -62,7 +62,7 @@
                 </ul>
             </div>
 
-            <div class="container">
+            <div class="products__container">
                 <ul class="grid">
                     <li>
                         <figure class="product">
@@ -230,8 +230,8 @@
 
     </main>
     <footer class="footer">
-        <div class="container">
-            <div class="footer__container">
+        <div class="footer__container">
+            <div class="footer__container__box">
                 <p class="footer__logo"><span class="footer__logo--color">Web</span>Studio</p>
                 <address class="footer__address">
                     m. Warszawa, Aleje Jerozolimskie 21
@@ -239,7 +239,7 @@
                     <a class="footer__link" href="tel:+48111111111">+48 111 111 111</a>
                 </address>
             </div>
-            <div class="footer__container">
+            <div class="footer__container__box">
                 <h3 class="footer__header">Dołącz do nas</h3>
                 <ul class="footer__socials">
                     <li class="footer__socials__item">
