--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
     </header>
     <main>
-        <section class="top-section" style="border: 1px solid green;">
+        <section class="top-section">
             <div class="top-section__overlay">
                 <div class="top-section__container">
                     <h1 class="top-section__primary-heading">Efektywne rozwiązania<br> dla waszego biznesu</h1>
