--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <header class="header line">
+    <header class="header">
         <div class="header__container">
             <a href="./index.html" class="logo">
                 <span class="logo--color">Web</span>Studio</a>
