--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <section class="strengths">
             <div class="strengths__container">
                 <ul class="strengths__list">
-                    <li>
+                    <li class="strengths__item">
                         <div class="strengths__box">
                             <svg width="65.32" height="70" class="strengths__box__icon">
                                 <use xlink:href="./images/icons.svg#antenna-logo"></use>
@@ -83,7 +83,7 @@
                             temporibus tempore.
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths__item">
                         <div class="strengths__box">
                             <svg width="65.32" height="70" class="strengths__box__icon">
                                 <use xlink:href="./images/icons.svg#clock-logo"></use>
@@ -97,7 +97,7 @@
                             temporibus tempore.
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths__item">
                         <div class="strengths__box">
                             <svg width="65.32" height="70" class="strengths__box__icon">
                                 <use xlink:href="./images/icons.svg#diagram-logo"></use>
@@ -111,7 +111,7 @@
                             temporibus tempore.
                         </p>
                     </li>
-                    <li>
+                    <li class="strengths__item">
                         <div class="strengths__box">
                             <svg width="65.32" height="70" class="strengths__box__icon">
                                 <use xlink:href="./images/icons.svg#astronaut-logo"></use>
@@ -162,7 +162,7 @@
                 <ul class="team__list">
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff.jpg" height="260" width="270"
+                            <img src="./images/stuff.jpg"
                                 alt="photo of Product Manager - John Doe" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
@@ -204,7 +204,7 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff2.jpg" height="260" width="270"
+                            <img src="./images/stuff2.jpg"
                                 alt="photo of Frontend Developer - John Doe" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
@@ -246,7 +246,7 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff3.jpg" height="260" width="270"
+                            <img src="./images/stuff3.jpg" 
                                 alt="photo of Marketing Specialist - John Doe" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
@@ -288,7 +288,7 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff4.jpg" height="260" width="270"
+                            <img src="./images/stuff4.jpg" 
                                 alt="photo of UI Designer - John Doe" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
