responsive design for index
responsive design for index
NOT WORKING FOOTER

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <li class="team__item">
                         <figure class="team__card">
                             <img src="./images/stuff.jpg"
-                                alt="photo of Product Manager - John Doe" />
+                                alt="photo of Product Manager - John Doe" class="team__card-picture"/>
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -205,7 +205,7 @@
                     <li class="team__item">
                         <figure class="team__card">
                             <img src="./images/stuff2.jpg"
-                                alt="photo of Frontend Developer - John Doe" />
+                                alt="photo of Frontend Developer - John Doe" class="team__card-picture"/>
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -247,7 +247,7 @@
                     <li class="team__item">
                         <figure class="team__card">
                             <img src="./images/stuff3.jpg" 
-                                alt="photo of Marketing Specialist - John Doe" />
+                                alt="photo of Marketing Specialist - John Doe" class="team__card-picture"/>
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -289,7 +289,7 @@
                     <li class="team__item">
                         <figure class="team__card">
                             <img src="./images/stuff4.jpg" 
-                                alt="photo of UI Designer - John Doe" />
+                                alt="photo of UI Designer - John Doe" class="team__card-picture"/>
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
