--- a/portfolio.html
+++ b/portfolio.html
@@ -106,7 +106,7 @@
 
                 <div class="products__container">
                     <ul class="products__list">
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -138,7 +138,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -170,7 +170,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -202,7 +202,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -234,7 +234,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -266,7 +266,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -298,7 +298,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -330,7 +330,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
@@ -362,7 +362,7 @@
                                 </figcaption>
                             </figure>
                         </li>
-                        <li>
+                        <li class="products__item">
                             <figure class="products__card">
                                 <div class="products__box">
                                     <img
