--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
                 <ul class="team__list">
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff.jpg"
-                                alt="photo of Product Manager - John Doe" class="team__card-picture"/>
+                            <img src="./images/stuff.jpg" alt="photo of Product Manager - John Doe"
+                                class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -204,8 +204,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff2.jpg"
-                                alt="photo of Frontend Developer - John Doe" class="team__card-picture"/>
+                            <img src="./images/stuff2.jpg" alt="photo of Frontend Developer - John Doe"
+                                class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -246,8 +246,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff3.jpg" 
-                                alt="photo of Marketing Specialist - John Doe" class="team__card-picture"/>
+                            <img src="./images/stuff3.jpg" alt="photo of Marketing Specialist - John Doe"
+                                class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -288,8 +288,8 @@
                     </li>
                     <li class="team__item">
                         <figure class="team__card">
-                            <img src="./images/stuff4.jpg" 
-                                alt="photo of UI Designer - John Doe" class="team__card-picture"/>
+                            <img src="./images/stuff4.jpg" alt="photo of UI Designer - John Doe"
+                                class="team__card-picture" />
                             <figcaption>
                                 <h3 class="team__card__name">John Doe</h3>
                                 <p class="team__card__profession">
@@ -489,8 +489,8 @@
                             id="user-policy">
                         <label for="user-policy" class="modal-form-policy-text">
 
-                            Oświadczam iż akceptuję&nbsp;<a href="#" class="link">Regulamin&nbsp;</a> i&nbsp; <a href="#"
-                                class="link">Politykę Prywatności</a>.</label>
+                            Oświadczam iż akceptuję&nbsp;<a href="#" class="link">Regulamin&nbsp;</a> i&nbsp; <a
+                                href="#" class="link">Politykę Prywatności</a>.</label>
 
                     </div>
 
@@ -500,6 +500,29 @@
                 </form>
             </div>
         </div>
+    </div>
+
+    <div class="mobile-menu">
+        <ul class="mobile-menu__list">
+            <li class="mobile-menu__item">Agencja</li>
+            <li class="mobile-menu__item">Portfolio</li>
+            <li class="mobile-menu__item">Kontakt</li>
+        </ul>
+
+        <ul class="mobile-contact__list">
+            <li class="mobile-contact__item"></li>
+            <li class="mobile-contact__item"></li>
+        </ul>
+
+        <ul class="mobile-socials__list">
+            <li class="mobile-socials__item">Instagram</li>
+            <li class="mobile-socials__item">Twitter</li>
+            <li class="mobile-socials__item">Facebook</li>
+            <li class="mobile-socials__item">LinkedIn</li>
+        </ul>
+    </div>
     <script src="./js/modal.js"></script>
+    <script src="./js/mobile-menu.js"></script>
 </body>
+
 </html>
