--- a/index.html
+++ b/index.html
@@ -508,11 +508,12 @@
     </div>
 
     <div class="menu-container js-menu-container" id="mobile-menu">
-        <button class="menu-toggle js-close-menu">
-            <svg width="18" height="18">
+        <button type="button" class="menu-toggle js-close-menu mobile-menu__button-close" data-modal-close>
+            <svg width="40" height="40">
                 <use xlink:href="./images/icons.svg#close-black"></use>
             </svg>
         </button>
+
         <ul class="mobile-menu__list">
             <li class="mobile-menu__item">
                 <a class="mobile-menu__link active-mobile" href="index.html">Agencja</a>
