portfolio responsive design
added mobile menu to portfolio,
added responsive design

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div class="footer__container">
+        <div class="footer__container"> 
             <div class="footer__container__box">
                 <p class="footer__logo">
                     <span class="footer__logo--color">Web</span>Studio
@@ -440,7 +440,7 @@
                     <label>
                         <input class="footer__form__input" type="email" name="email" placeholder="E-mail" />
                     </label>
-                    <button class="button" type="submit">
+                    <button class="footer__form-button" type="submit">
                         Zapisz się
                         <svg class="button__send-icon" width="24" height="24">
                             <use xlink:href="./images/icons.svg#icon-send"></use>
