footer button portfolio
footer button portfolio name change

--- a/index.html
+++ b/index.html
@@ -442,7 +442,7 @@
                     </label>
                     <button class="footer__form-button" type="submit">
                         Zapisz się
-                        <svg class="button__send-icon" width="24" height="24">
+                        <svg class="footer__form-button-send-icon" width="24" height="24">
                             <use xlink:href="./images/icons.svg#icon-send"></use>
                         </svg>
                     </button>
