--- a/portfolio.html
+++ b/portfolio.html
@@ -461,16 +461,10 @@
                                 placeholder="E-mail"
                             />
                         </label>
-                        <button class="button" type="submit">
+                        <button class="footer__form-button" type="submit">
                             Zapisz się
-                            <svg
-                                class="button__send-icon"
-                                width="24"
-                                height="24"
-                            >
-                                <use
-                                    xlink:href="./images/icons.svg#icon-send"
-                                ></use>
+                            <svg class="footer__form-button-send-icon" width="24" height="24">
+                                <use xlink:href="./images/icons.svg#icon-send"></use>
                             </svg>
                         </button>
                     </form>
