footer button fix
footer button fix

--- a/index.html
+++ b/index.html
@@ -436,16 +436,17 @@
                     <h3 class="footer__form__header">
                         Zapisz się do newslettera
                     </h3>
-
-                    <label>
-                        <input class="footer__form__input" type="email" name="email" placeholder="E-mail" />
-                    </label>
-                    <button class="footer__form-button" type="submit">
-                        Zapisz się
-                        <svg class="footer__form-button-send-icon" width="24" height="24">
-                            <use xlink:href="./images/icons.svg#icon-send"></use>
-                        </svg>
-                    </button>
+                    <div class="footer__form-input-container">
+                        <label>
+                            <input class="footer__form__input" type="email" name="email" placeholder="E-mail" />
+                        </label>
+                        <button class="footer__form-button" type="submit">
+                            Zapisz się
+                            <svg class="footer__form-button-send-icon" width="24" height="24">
+                                <use xlink:href="./images/icons.svg#icon-send"></use>
+                            </svg>
+                        </button>
+                    </div>
                 </form>
             </div>
         </div>
